[gd_scene load_steps=18 format=3 uid="uid://cmwb81du1kbtm"]

[ext_resource type="Script" uid="uid://ce7fr2qft005n" path="res://game/menus/lobby/lobby.gd" id="1_jtfrr"]
[ext_resource type="Texture2D" uid="uid://cp68q5xemqd01" path="res://game/menus/lobby/icons/play.png" id="2_6xr3g"]
[ext_resource type="Texture2D" uid="uid://nyuii0fx273c" path="res://game/menus/lobby/background.png" id="2_8bvc3"]
[ext_resource type="Texture2D" uid="uid://d14nbphg5o3a" path="res://game/events/common/chat/chat.png" id="2_wjeu5"]
[ext_resource type="Script" uid="uid://c5wn8p7yq48wc" path="res://game/events/common/chat/chat.gd" id="3_amd3n"]
[ext_resource type="Texture2D" uid="uid://durmmh0vjl0eg" path="res://menu/theme/icons/exit.png" id="3_cwg7d"]
[ext_resource type="Texture2D" uid="uid://ccyn16fdlha6p" path="res://game/menus/lobby/icons/change_event.png" id="3_pddfd"]
[ext_resource type="Texture2D" uid="uid://eyfsi3j0o04s" path="res://game/menus/lobby/icons/change_map.png" id="4_4kry5"]
[ext_resource type="Texture2D" uid="uid://dwtddg0cmagg1" path="res://game/events/common/chat/chat_send.png" id="4_6keib"]
[ext_resource type="Script" uid="uid://lf4v4xbu425r" path="res://game/menus/lobby/view_ip_dialog.gd" id="5_jyb4t"]
[ext_resource type="Texture2D" uid="uid://cdlm17je2ol0u" path="res://game/menus/lobby/icons/presets.png" id="7_8ughs"]
[ext_resource type="Texture2D" uid="uid://c3r13t5eig25e" path="res://game/menus/lobby/icons/view_ips.png" id="7_f0cv5"]
[ext_resource type="Script" uid="uid://cq43botg0qg0m" path="res://menu/items_grid/items_grid.gd" id="11_ncktp"]
[ext_resource type="PackedScene" uid="uid://y56j4fgei867" path="res://game/menus/lobby/presets/preset_manager.tscn" id="13_jqaxo"]

[sub_resource type="Animation" id="Animation_dja87"]
resource_name = "Countdown"
length = 3.0
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.65, 1, 1.3, 1.65, 2, 2.35, 2.7, 3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": ["Начало через 3...", "Начало через 3..", "Начало через 3.", "Начало через 2...", "Начало через 2..", "Начало через 2.", "Начало через 1...", "Начало через 1..", "Начало через 1.", "Начинаем!"]
}

[sub_resource type="Animation" id="Animation_5k1w6"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["Начало через 3..."]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8ughs"]
_data = {
&"Countdown": SubResource("Animation_dja87"),
&"RESET": SubResource("Animation_5k1w6")
}

[node name="Lobby" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jtfrr")
metadata/_custom_type_script = "uid://ce7fr2qft005n"

[node name="Image" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_8bvc3")
stretch_mode = 6

[node name="Panels" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -406.0
offset_top = -211.0
offset_right = 406.0
offset_bottom = 211.0
grow_horizontal = 2
grow_vertical = 2

[node name="Lobby" type="PanelContainer" parent="Panels"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panels/Lobby"]
layout_mode = 2

[node name="Title" type="Label" parent="Panels/Lobby/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_type_variation = &"HeaderMedium"
text = "Игроки в комнате:"

[node name="Panel" type="PanelContainer" parent="Panels/Lobby/VBoxContainer"]
custom_minimum_size = Vector2(320, 0)
layout_mode = 2

[node name="PlayersContainer" type="GridContainer" parent="Panels/Lobby/VBoxContainer/Panel"]
unique_name_in_owner = true
layout_mode = 2
columns = 2

[node name="Environment" type="HBoxContainer" parent="Panels/Lobby/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Event" type="TextureRect" parent="Panels/Lobby/VBoxContainer/Environment"]
unique_name_in_owner = true
self_modulate = Color(0.752941, 0.752941, 0.752941, 1)
custom_minimum_size = Vector2(392, 80)
layout_mode = 2
size_flags_horizontal = 3
expand_mode = 1

[node name="Container" type="VBoxContainer" parent="Panels/Lobby/VBoxContainer/Environment/Event"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Name" type="Label" parent="Panels/Lobby/VBoxContainer/Environment/Event/Container"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 4
theme_override_font_sizes/font_size = 24
horizontal_alignment = 1
vertical_alignment = 1

[node name="Description" type="Label" parent="Panels/Lobby/VBoxContainer/Environment/Event/Container"]
layout_mode = 2
size_flags_vertical = 1
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 4
horizontal_alignment = 1
vertical_alignment = 2

[node name="Map" type="TextureRect" parent="Panels/Lobby/VBoxContainer/Environment"]
unique_name_in_owner = true
self_modulate = Color(0.752941, 0.752941, 0.752941, 1)
custom_minimum_size = Vector2(392, 80)
layout_mode = 2
size_flags_horizontal = 3
expand_mode = 1

[node name="Container" type="VBoxContainer" parent="Panels/Lobby/VBoxContainer/Environment/Map"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Name" type="Label" parent="Panels/Lobby/VBoxContainer/Environment/Map/Container"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 4
theme_override_font_sizes/font_size = 24
horizontal_alignment = 1
vertical_alignment = 1

[node name="Description" type="Label" parent="Panels/Lobby/VBoxContainer/Environment/Map/Container"]
layout_mode = 2
size_flags_vertical = 1
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 4
horizontal_alignment = 1
vertical_alignment = 2

[node name="Player" type="HBoxContainer" parent="Panels/Lobby/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Skin" type="TextureRect" parent="Panels/Lobby/VBoxContainer/Player"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 128)
layout_mode = 2
size_flags_horizontal = 3
expand_mode = 1
stretch_mode = 5

[node name="Type" type="Label" parent="Panels/Lobby/VBoxContainer/Player/Skin"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 23.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 4
theme_override_font_sizes/font_size = 12
text = "Скин"
horizontal_alignment = 1
autowrap_mode = 2

[node name="Name" type="Label" parent="Panels/Lobby/VBoxContainer/Player/Skin"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -23.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_constants/line_spacing = -2
theme_override_constants/outline_size = 4
horizontal_alignment = 1
autowrap_mode = 2

[node name="RarityFill" type="ColorRect" parent="Panels/Lobby/VBoxContainer/Player/Skin"]
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ChangeSkin" type="Button" parent="Panels/Lobby/VBoxContainer/Player/Skin"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
flat = true

[node name="LightWeapon" type="TextureRect" parent="Panels/Lobby/VBoxContainer/Player"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 128)
layout_mode = 2
size_flags_horizontal = 3
expand_mode = 1
stretch_mode = 5

[node name="Type" type="Label" parent="Panels/Lobby/VBoxContainer/Player/LightWeapon"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 23.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 4
theme_override_font_sizes/font_size = 12
text = "Лёгкое оружие"
horizontal_alignment = 1
autowrap_mode = 2

[node name="Name" type="Label" parent="Panels/Lobby/VBoxContainer/Player/LightWeapon"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -23.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_constants/line_spacing = -2
theme_override_constants/outline_size = 4
horizontal_alignment = 1
autowrap_mode = 2

[node name="RarityFill" type="ColorRect" parent="Panels/Lobby/VBoxContainer/Player/LightWeapon"]
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ChangeLightWeapon" type="Button" parent="Panels/Lobby/VBoxContainer/Player/LightWeapon"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
flat = true

[node name="HeavyWeapon" type="TextureRect" parent="Panels/Lobby/VBoxContainer/Player"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 128)
layout_mode = 2
size_flags_horizontal = 3
expand_mode = 1
stretch_mode = 5

[node name="Type" type="Label" parent="Panels/Lobby/VBoxContainer/Player/HeavyWeapon"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 23.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 4
theme_override_font_sizes/font_size = 12
text = "Тяжёлое оружие"
horizontal_alignment = 1
autowrap_mode = 2

[node name="Name" type="Label" parent="Panels/Lobby/VBoxContainer/Player/HeavyWeapon"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -23.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_constants/line_spacing = -2
theme_override_constants/outline_size = 4
horizontal_alignment = 1
autowrap_mode = 2

[node name="RarityFill" type="ColorRect" parent="Panels/Lobby/VBoxContainer/Player/HeavyWeapon"]
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ChangeHeavyWeapon" type="Button" parent="Panels/Lobby/VBoxContainer/Player/HeavyWeapon"]
layout_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
flat = true

[node name="SupportWeapon" type="TextureRect" parent="Panels/Lobby/VBoxContainer/Player"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 128)
layout_mode = 2
size_flags_horizontal = 3
expand_mode = 1
stretch_mode = 5

[node name="Type" type="Label" parent="Panels/Lobby/VBoxContainer/Player/SupportWeapon"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 23.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 4
theme_override_font_sizes/font_size = 12
text = "Оружие поддержки"
horizontal_alignment = 1
autowrap_mode = 2

[node name="Name" type="Label" parent="Panels/Lobby/VBoxContainer/Player/SupportWeapon"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -23.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_constants/line_spacing = -2
theme_override_constants/outline_size = 4
horizontal_alignment = 1
autowrap_mode = 2

[node name="RarityFill" type="ColorRect" parent="Panels/Lobby/VBoxContainer/Player/SupportWeapon"]
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ChangeSupportWeapon" type="Button" parent="Panels/Lobby/VBoxContainer/Player/SupportWeapon"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
flat = true

[node name="MeleeWeapon" type="TextureRect" parent="Panels/Lobby/VBoxContainer/Player"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 128)
layout_mode = 2
size_flags_horizontal = 3
expand_mode = 1
stretch_mode = 5

[node name="Type" type="Label" parent="Panels/Lobby/VBoxContainer/Player/MeleeWeapon"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 23.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 4
theme_override_font_sizes/font_size = 12
text = "Ближнее оружие"
horizontal_alignment = 1
autowrap_mode = 2

[node name="Name" type="Label" parent="Panels/Lobby/VBoxContainer/Player/MeleeWeapon"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -23.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_constants/line_spacing = -2
theme_override_constants/outline_size = 4
horizontal_alignment = 1
autowrap_mode = 2

[node name="RarityFill" type="ColorRect" parent="Panels/Lobby/VBoxContainer/Player/MeleeWeapon"]
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ChangeMeleeWeapon" type="Button" parent="Panels/Lobby/VBoxContainer/Player/MeleeWeapon"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
flat = true

[node name="Skill" type="TextureRect" parent="Panels/Lobby/VBoxContainer/Player"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 128)
layout_mode = 2
size_flags_horizontal = 3
expand_mode = 1
stretch_mode = 5

[node name="Type" type="Label" parent="Panels/Lobby/VBoxContainer/Player/Skill"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 23.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 4
theme_override_font_sizes/font_size = 12
text = "Навык"
horizontal_alignment = 1
autowrap_mode = 2

[node name="Name" type="Label" parent="Panels/Lobby/VBoxContainer/Player/Skill"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -23.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_constants/line_spacing = -2
theme_override_constants/outline_size = 4
horizontal_alignment = 1
autowrap_mode = 2

[node name="RarityFill" type="ColorRect" parent="Panels/Lobby/VBoxContainer/Player/Skill"]
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ChangeSkin" type="Button" parent="Panels/Lobby/VBoxContainer/Player/Skill"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
flat = true

[node name="ClientHint" type="Label" parent="Panels/Lobby/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "Начать игру может только админ."
horizontal_alignment = 1

[node name="AdminPanel" type="HBoxContainer" parent="Panels/Lobby/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
alignment = 1

[node name="StartEvent" type="Button" parent="Panels/Lobby/VBoxContainer/AdminPanel"]
layout_mode = 2
size_flags_horizontal = 4
text = "Начать!"
icon = ExtResource("2_6xr3g")

[node name="ChangeEvent" type="Button" parent="Panels/Lobby/VBoxContainer/AdminPanel"]
layout_mode = 2
text = "Сменить событие..."
icon = ExtResource("3_pddfd")

[node name="ChangeMap" type="Button" parent="Panels/Lobby/VBoxContainer/AdminPanel"]
layout_mode = 2
text = "Сменить карту..."
icon = ExtResource("4_4kry5")

[node name="Countdown" type="Label" parent="Panels/Lobby/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "Начало через 3..."
horizontal_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="Panels/Lobby/VBoxContainer/Countdown"]
libraries = {
&"": SubResource("AnimationLibrary_8ughs")
}

[node name="ControlButtons" type="HBoxContainer" parent="Panels/Lobby/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="Chat" type="Button" parent="Panels/Lobby/VBoxContainer/ControlButtons"]
layout_mode = 2
size_flags_horizontal = 0
toggle_mode = true
icon = ExtResource("2_wjeu5")

[node name="Presets" type="Button" parent="Panels/Lobby/VBoxContainer/ControlButtons"]
layout_mode = 2
size_flags_horizontal = 0
icon = ExtResource("7_8ughs")

[node name="ConnectedToIP" type="LinkButton" parent="Panels/Lobby/VBoxContainer/ControlButtons"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
text = "Подключён к "
underline = 1

[node name="ViewIP" type="Button" parent="Panels/Lobby/VBoxContainer/ControlButtons"]
visible = false
layout_mode = 2
size_flags_horizontal = 6
text = "Просмотреть IP-адреса..."
icon = ExtResource("7_f0cv5")

[node name="Leave" type="Button" parent="Panels/Lobby/VBoxContainer/ControlButtons"]
layout_mode = 2
size_flags_horizontal = 8
text = "Выйти"
icon = ExtResource("3_cwg7d")

[node name="Chat" type="PanelContainer" parent="Panels"]
auto_translate_mode = 2
visible = false
self_modulate = Color(1, 1, 1, 0.878431)
custom_minimum_size = Vector2(320, 0)
layout_mode = 2
focus_mode = 2
script = ExtResource("3_amd3n")
chat_button_path = NodePath("../Lobby/VBoxContainer/ControlButtons/Chat")
metadata/_custom_type_script = "uid://c5wn8p7yq48wc"
metadata/_edit_use_anchors_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="Panels/Chat"]
layout_mode = 2

[node name="Messages" type="RichTextLabel" parent="Panels/Chat/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
scroll_following = true
meta_underlined = false
hint_underlined = false

[node name="HBoxContainer" type="HBoxContainer" parent="Panels/Chat/VBoxContainer"]
layout_mode = 2

[node name="LineEdit" type="LineEdit" parent="Panels/Chat/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Сообщение..."
max_length = 80
context_menu_enabled = false

[node name="Send" type="TextureButton" parent="Panels/Chat/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
texture_normal = ExtResource("4_6keib")
ignore_texture_size = true
stretch_mode = 4

[node name="ItemSelector" type="Window" parent="."]
size = Vector2i(408, 440)
visible = false
transient = true
exclusive = true
unresizable = true

[node name="Background" type="ColorRect" parent="ItemSelector"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="ItemSelector"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ScrollContainer" type="ScrollContainer" parent="ItemSelector/MarginContainer"]
layout_mode = 2
horizontal_scroll_mode = 0

[node name="ItemsGrid" type="GridContainer" parent="ItemSelector/MarginContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 6
columns = 3
script = ExtResource("11_ncktp")
metadata/_custom_type_script = "uid://cq43botg0qg0m"

[node name="PresetManager" parent="." instance=ExtResource("13_jqaxo")]
visible = false

[node name="ViewIPDialog" type="AcceptDialog" parent="."]
title = "Твои IP-адреса"
size = Vector2i(640, 160)
exclusive = false
unresizable = true
popup_window = true
dialog_autowrap = true
script = ExtResource("5_jyb4t")

[node name="HTTPRequest" type="HTTPRequest" parent="ViewIPDialog"]
timeout = 5.0

[node name="BroadcastTimer" type="Timer" parent="."]

[node name="UpdateBroadcastTimer" type="Timer" parent="."]
wait_time = 10.0

[node name="CountdownTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[connection signal="pressed" from="Panels/Lobby/VBoxContainer/Player/Skin/ChangeSkin" to="." method="_on_change_skin_pressed"]
[connection signal="pressed" from="Panels/Lobby/VBoxContainer/Player/LightWeapon/ChangeLightWeapon" to="." method="_on_change_light_weapon_pressed"]
[connection signal="pressed" from="Panels/Lobby/VBoxContainer/Player/HeavyWeapon/ChangeHeavyWeapon" to="." method="_on_change_heavy_weapon_pressed"]
[connection signal="pressed" from="Panels/Lobby/VBoxContainer/Player/SupportWeapon/ChangeSupportWeapon" to="." method="_on_change_support_weapon_pressed"]
[connection signal="pressed" from="Panels/Lobby/VBoxContainer/Player/MeleeWeapon/ChangeMeleeWeapon" to="." method="_on_change_melee_weapon_pressed"]
[connection signal="pressed" from="Panels/Lobby/VBoxContainer/Player/Skill/ChangeSkin" to="." method="_on_change_skill_pressed"]
[connection signal="pressed" from="Panels/Lobby/VBoxContainer/AdminPanel/StartEvent" to="." method="_on_start_event_pressed"]
[connection signal="pressed" from="Panels/Lobby/VBoxContainer/AdminPanel/ChangeEvent" to="." method="_on_change_event_pressed"]
[connection signal="pressed" from="Panels/Lobby/VBoxContainer/AdminPanel/ChangeMap" to="." method="_on_change_map_pressed"]
[connection signal="toggled" from="Panels/Lobby/VBoxContainer/ControlButtons/Chat" to="Panels/Chat" method="_on_chat_toggled"]
[connection signal="pressed" from="Panels/Lobby/VBoxContainer/ControlButtons/Presets" to="PresetManager" method="popup_centered"]
[connection signal="pressed" from="Panels/Lobby/VBoxContainer/ControlButtons/ConnectedToIP" to="." method="_on_connected_to_ip_pressed"]
[connection signal="pressed" from="Panels/Lobby/VBoxContainer/ControlButtons/ViewIP" to="ViewIPDialog" method="popup_centered"]
[connection signal="pressed" from="Panels/Lobby/VBoxContainer/ControlButtons/Leave" to="." method="_on_leave_pressed"]
[connection signal="text_submitted" from="Panels/Chat/VBoxContainer/HBoxContainer/LineEdit" to="Panels/Chat" method="send_message" unbinds=1]
[connection signal="pressed" from="Panels/Chat/VBoxContainer/HBoxContainer/Send" to="Panels/Chat" method="send_message"]
[connection signal="close_requested" from="ItemSelector" to="ItemSelector" method="hide"]
[connection signal="item_selected" from="ItemSelector/MarginContainer/ScrollContainer/ItemsGrid" to="." method="_on_item_selected"]
[connection signal="about_to_popup" from="ViewIPDialog" to="ViewIPDialog" method="_on_about_to_popup"]
[connection signal="custom_action" from="ViewIPDialog" to="ViewIPDialog" method="_on_custom_action"]
[connection signal="request_completed" from="ViewIPDialog/HTTPRequest" to="ViewIPDialog" method="_on_request_completed"]
[connection signal="timeout" from="BroadcastTimer" to="." method="_do_broadcast"]
[connection signal="timeout" from="UpdateBroadcastTimer" to="." method="_find_ips_for_broadcast"]
[connection signal="timeout" from="CountdownTimer" to="." method="_on_countdown_timer_timeout"]
